<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Domusic</string>
    <string name="do_music" translatable="false">DO\nMUSIC</string>
    <string name="search_compositors">Бастакорларни қидириш</string>
    <string name="search_by_author_and_name">Китобнинг номи ва муаллифи бўйича</string>
    <string name="login_hint">Логинни киритинг</string>
    <string name="password_hint">Паролни киритинг</string>
    <string name="confirm">Тугмани босиш орқали сиз <u> махфийлик сиёсатига розилик билдирасиз.</u></string>
    <string name="forgot_password">Парольни унутдингизми?</string>
    <string name="login">Кириш</string>
    <string name="download"><u>Юклаш</u></string>
    <string name="rights">© 2021 DOM MUSIC. Барча хуқуқлар химояланган</string>
    <string name="opus">Опус/Нашр:</string>
    <string name="uzbek_filter">Ўзбек</string>
    <string name="russian_filter">Рус</string>
    <string name="foreign_filters">Хориж</string>
    <string name="theory_salfedgio_filter">Адабиёт ва сольфеджио</string>
    <string name="book">Книга:</string>
    <string name="clavir">Клавир:</string>
    <string name="instrument">Инструмент:</string>
    <string name="part">Партия:</string>
    <string name="instrumental">Инструментал</string>
    <string name="vocal">Вокал</string>
    <string name="search_nameNote">Нотанинг номи бўйича қидириш</string>
    <string name="favourite">Севимлилар</string>
    <string name="notes">Ноталар</string>
    <string name="books">Китоблар</string>
    <string name="vocals">Вокал</string>
    <string name="classes">Синфлар:</string>
    <string name="agree">Ўчириш</string>
    <string name="disagree">Бекор қилиш</string>
    <string name="delete">Севимлилардан ўчиришни хохлайсизми?</string>
    <string name="are_you_sure">Сиз ўчиришни аниқ хохлайсизми?</string>
    <string name="personal_info">Шахсий маълумотлар</string>
    <string name="personal_cabinet">Шахсий профиль</string>
    <string name="FIO">Ф.И.О.</string>
    <string name="date_of_birth">Туғилган сана</string>
    <string name="email">Почта</string>
    <string name="change">Ўзгартириш</string>
    <string name="telephone_number">Телефон рақами</string>
    <string name="region">Вилоят</string>
    <string name="town">Шахар</string>
    <string name="school">Мактаб</string>
    <string name="language">Тил</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="uzbekcha" translatable="false">Узбекча</string>
    <string name="ozbekcha" translatable="false">O`zbekcha</string>
    <string name="devices">Қурилмалар</string>
    <string name="about_us">Биз хақимизда</string>
    <string name="about_us_do_music">OOO “DOMMUSIC” – IT компания, мусиқа билан шуғулланувчилар учун онлайн-кутубхона дастурчиси.</string>
    <string name="about_us_key_skills">\nФаолиятнинг муҳим йўналишлари:</string>
    <string name="about_us_key_skills_bullets">\nМусиқий материалларни рақамлаштириш\n\nМустақил таълим олиш имкониятларни амалга ошириш\n\nМусиқачиларнинг рақамли саводхонлигини ривожлантириш</string>
    <string name="about_us_advantages">\nҚулайлик ва имтиёзлар :</string>
    <string name="about_us_advantages_bullets">\n  Қулай ва интуитив интерфейс\n\nТил тўзиғининг ёқлиги\n\nКеракли бўлган китоб ва ноталарни тез хамда қулай қидириш\n\nАқлли фильтрлар, жанр ва асбобларни саралаш\n\nСевимлилар, кундалик фойдаланиш учун вақтни тежаш\n\nҚайта алоқа, техник хизмат кўрсатиш ва бошқа муаммолар</string>
    <string name="about_us_text">\nКомпанияниг асосий махсулоти онлайн мусиқа кутубхонаси. Сайт сизга ўқитувчилар, ўқувчилар, талабалар ва бошқаларнинг кундалик хаёти  учун ноталарни қидиришни оссонлаштиришга имкон беради. Самарадорликни ошириш ва махсус вазиятларда ижодий инсонларга халақит берадиган ёқотиш / унутиш хавфини камайтириш, ахборотни шикастланиш ва ёқотишдан ҳимоя қилувчи хавфсиз тармоқ, шунингдек қўшимча таълим ресурсларидан унумли фойдаланиш.Мусиқа биринчи навбатда севилиши керак; юракдан чиқиши ва юракга айланиши. Акс холда, мусиқа абадий ва ўчмас санъат бўлиш умидидан маҳрум бўлиши керак.</string>
    <string name="sergey_rahmaninov">\nСергей Рахманинов</string>
    <string name="about_us_end">\nDomusic хизматлари мобил илова форматида хам мавжуд.</string>
    <string name="politics_of_confidenciality"><u>Махфийлик сиёсати</u></string>
    <string name="having_rights"><u>Муаллифларга</u></string>
    <string name="public_offert"><u>Оммавий таклиф</u></string>
    <string name="tech_support">Қайта алоқа</string>
    <string name="technical_problems">Техник носозлик</string>
    <string name="note_not_found">Нота топилмадими?</string>
    <string name="preferences">Таклиф ва тилаклар</string>
    <string name="input_here">Хабарингизни киритинг </string>
    <string name="no_internet_connection">Интернет билан алоқа йўқ</string>
    <string name="login_text">Логин</string>
    <string name="password">Пароль</string>
    <string name="hashtag">##########</string>
    <string name="incorrect_credentials">Нотўғри логин ва пароль</string>
    <string name="check_connection">Интернет билан алоқани текширинг, акс холда кэш маълумотлари кўрсатилади</string>
    <string name="ok">OК</string>
    <string name="nothing_found">Хеч нима топилмади...</string>
    <string name="try_to_find_by_name">Нота хамда бастакор номи бўйича қидириб кўринг</string>
    <string name="not_added_yet">Хозирда киритилмаган</string>
    <string name="will_appear_here">Севимлиларга қўшилган ноталар хамда китоблар шу ерда пайдо бўлади</string>
    <string name="password_change">Парольни ўзгартириш</string>
    <string name="enter_the_code">Илтимос, электрон почтангизга \nюборилган кодни киритинг</string>
    <string name="enter_six_number_hint">6 рақамли кодни киритинг</string>
    <string name="continue_btn">Давом этиш</string>
    <string name="email_change">Почтани ўзгартириш</string>
    <string name="enter_the_email">Илтимос, янги электрон почта \nманзилини киритинг</string>
    <string name="enter_email_adress">Почтани киритинг</string>
    <string name="add_your_info">Маълумотларингизни киритинг</string>
    <string name="send">Юбориш</string>
    <string name="change_password_success">Пароль муваффақиятли ўзгартирилди</string>
    <string name="change_email_success">Почта муваффақиятли ўзгартирилди</string>
    <string name="tech_support_email">Тез орада техник ёрдам бўйича мутахассис сиз билан боғланади</string>
    <string name="incorrect_code">Нотоғри код</string>
    <string name="confirm_password_hint">Янги парольни тасдиқланг</string>
    <string name="new_password_hint">Янги парольни киритинг</string>
    <string name="error">Хатолик</string>
    <string name="attached">"Файл бириктирилган : "</string>
    <string name="v10">v 1.0</string>
    <string name="logout">Чиқиш</string>
    <string name="policy_link"><a href="https://domusic.uz/help/confidential">Махфийлик сиёсати</a></string>
    <string name="right_owners_link"><a href="https://domusic.uz/help/copyright">Муаллифларга</a></string>
    <string name="offer_link"><a href="https://domusic.uz/help/offer">Оммавий таклиф</a></string>
    <string name="input_email">/@mail киритинг</string>
    <string name="logout_session_dialog">Сеансни тугатиш</string>
    <string name="input_phone">Телефон ракамингизни киритинг</string>
    <string name="literature">Адабиёт</string>
    <string name="logout_sure_dialog">Чикишни хохлайсизми?</string>
    <string name="yes">Ха</string>
    <string name="compositors_tab">"Бастакорлар "</string>
    <string name="vocal_tab">Вокаллар</string>
    <string name="instruments_tab">Асбоблар</string>
    <string name="theory_tab">Назария</string>
    <string name="restore_login_dialog">Тез орада техник ёрдам бўйича мутахассис сиз билан боғланади</string>
    <string name="thanks">Рахмат</string>
    <string name="enter_email_new">Янги почтани киритинг</string>
    <string name="rus" translatable="false">Рус</string>
    <string name="ozb" translatable="false">Узб</string>
    <string name="uz" translatable="false">Uzb</string>
    <string name="thanks_for_feedback">Фикр-мулохаза учун рахмат</string>
    <string name="feedback_manager">Бизнинг менежеримиз сиз билан яқин орада боғланади</string>
    <string name="back">Кайтиш</string>
    <string name="add_to_fav_dialog">Ушбу операцияни интернетсиз амалга ошириш мумкин эмас</string>
    <string name="limit_exceeded">Кириш чекланган</string>
    <string name="every_day_limit">Кунлик юклаб олиш лимити тугади</string>
    <string name="save">Сақлаш</string>
    <string name="account_exist">Сиз киритган электрон почта манзили бошқа фойдаланувчи томонидан фойдаланилмоқда, бошқа почта манзилини танланг</string>
    <string name="password_exist">Илтимос, аккаунтингиз хавфсизлиги учун бошқа пароль ўйлаб топинг</string>
    <string name="main">Бош сахифа</string>
    <string name="my_library">Менинг кутубхонам</string>
    <string name="profile">Профиль</string>
    <string name="permission_handling">Дастур тўгри ишлаши учун созламалар орқали уқиш ва ёзиш имкониятини ёқинг</string>
    <string name="download_complete">Юклаш тугалланди</string>
    <string name="choreography">Рақс</string>
</resources>