<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elegantTextHeight="true"
            android:fontFamily="@font/montserrat_medium"
            android:lineSpacingExtra="1dp"
            android:text="@string/about_us_do_music"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/about_us_key_skills"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/montserrat_medium"
            android:lineSpacingExtra="1dp"
            android:text="@string/about_us_key_skills_bullets"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/about_us_advantages"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/montserrat_medium"
            android:lineSpacingExtra="1dp"
            android:text="@string/about_us_advantages_bullets"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:lineSpacingExtra="1dp"
            android:text="@string/about_us_text"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="right"
            android:text="@string/sergey_rahmaninov"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:lineSpacingExtra="1dp"
            android:text="@string/about_us_end"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:background="?attr/selectableItemBackground"
            android:id="@+id/policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/policy_link"
            android:textSize="12sp" />

        <TextView
            android:background="?attr/selectableItemBackground"
            android:id="@+id/rights_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/right_owners_link"
            android:textSize="12sp" />

        <TextView
            android:background="?attr/selectableItemBackground"
            android:id="@+id/public_offert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/offer_link"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_facebook" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:src="@drawable/ic_instagram" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:src="@drawable/ic_youtube" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:src="@drawable/ic_telegram" />
        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>