<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        android:fontFamily="@font/montserrat_bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:textSize="22sp"
        android:textColor="#000"
        android:text="@string/logout_session_dialog"
        android:layout_marginBottom="15dp"
        />
    <TextView
        android:fontFamily="@font/montserrat_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/body"
        android:textSize="22sp"
        android:text="@string/logout_sure_dialog"
        android:layout_marginBottom="15dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_light"
            android:id="@+id/negative_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/disagree"
            android:textSize="20sp"

            />

        <TextView
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/positive_button"
            android:fontFamily="@font/montserrat_semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textColor="#FF0000"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>
