<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_logo" />

    <TextView
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/no_internet_connection"/>

    <TextView
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:fontFamily="@font/montserrat_regular"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/check_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:padding="5dp"
        android:layout_gravity="end"
        android:background="?attr/selectableItemBackground"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_light"
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/ok"
        android:textSize="20sp"
        />
</LinearLayout>