<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_language"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    android:layout_marginEnd="13dp"
    android:layout_marginStart="13dp">

    <RadioGroup
        android:id="@+id/languages_group"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RadioButton
            android:id="@+id/russian"
            android:fontFamily="@font/montserrat_medium"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:text="@string/russian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <RadioButton
            android:id="@+id/ozbekcha"
            android:fontFamily="@font/montserrat_medium"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:text="@string/ozbekcha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <RadioButton
            android:id="@+id/uzbekcha"
            android:fontFamily="@font/montserrat_medium"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:text="@string/uzbekcha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>