<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_personal"
    android:paddingBottom="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="13dp"
    android:layout_marginEnd="13dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/FIO"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/fio"
        style="@style/SearchEditText"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/back_cabinet"
        android:ems="10"
        android:enabled="false"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/date_of_birth"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/date_of_birth"
        style="@style/SearchEditText"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/back_cabinet"
        android:ems="10"
        android:enabled="false"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingLeft="10dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/email"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/email"
            style="@style/SearchEditText"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/back_cabinet"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingLeft="10dp" />

        <TextView
            android:id="@+id/change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="right"
            android:layout_marginEnd="10dp"
            android:text="@string/change" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/telephon_number"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <EditText
            android:id="@+id/telephon_number"
            style="@style/SearchEditText"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/back_cabinet"
            android:ems="10"
            android:hint="@string/telephon_number"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingLeft="10dp" />

        <TextView
            android:layout_marginEnd="10dp"
            android:id="@+id/change_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="right"
            android:text="@string/change" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/region"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/region"
        style="@style/SearchEditText"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/back_cabinet"
        android:ems="10"
        android:enabled="false"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/town"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/town"
        style="@style/SearchEditText"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/back_cabinet"
        android:ems="10"
        android:enabled="false"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/school"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/school"
        style="@style/SearchEditText"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/back_cabinet"
        android:ems="10"
        android:enabled="false"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingLeft="10dp" />


</LinearLayout>
